// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`find-completed-tasks tool > getting completed tasks by completion date (default) > should get completed tasks by completion date 1`] = `
"Completed tasks (by completed date): 1 (limit 50).
Filter: completed date: 2025-08-10 to 2025-08-15.
Preview:
    Completed task 1 • due 2025-08-14 • P3 • id=8485093748"
`;

exports[`find-completed-tasks tool > getting completed tasks by completion date (default) > should handle explicit completion date query 1`] = `
"Completed tasks (by completed date): 0 (limit 100), more available.
Filter: completed date: 2025-08-01 to 2025-08-31; project: specific-project-id.
No results. No tasks completed in this date range; Try expanding the date range; Try removing project/section/parent filters.
Possible suggested next step:
- Pass cursor 'next-cursor' to fetch more results."
`;

exports[`find-completed-tasks tool > getting completed tasks by due date > should get completed tasks by due date 1`] = `
"Completed tasks (by due date): 1 (limit 50).
Filter: due date: 2025-08-10 to 2025-08-20.
Preview:
    Task completed by due date • due 2025-08-15 • P2 • id=8485093750"
`;

exports[`find-completed-tasks tool > label filtering > should combine other filters with label filters 1`] = `
"Completed tasks (by due date): 1 (limit 25).
Filter: due date: 2025-08-01 to 2025-08-31; project: test-project-id; section: test-section-id; labels: @important.
Preview:
    Important completed task • P4 • id=8485093748"
`;

exports[`find-completed-tasks tool > label filtering > should filter completed tasks by labels: 'multiple labels with AND operator' 1`] = `
"Completed tasks (by due date): 1 (limit 50).
Filter: due date: 2025-08-01 to 2025-08-31; labels: @work & @urgent.
Preview:
    Completed task with label • P4 • id=8485093748"
`;

exports[`find-completed-tasks tool > label filtering > should filter completed tasks by labels: 'multiple labels with OR operator' 1`] = `
"Completed tasks (by completed date): 1 (limit 25).
Filter: completed date: 2025-08-10 to 2025-08-20; labels: @personal | @shopping.
Preview:
    Completed task with label • P4 • id=8485093748"
`;

exports[`find-completed-tasks tool > label filtering > should filter completed tasks by labels: 'single label with OR operator' 1`] = `
"Completed tasks (by completed date): 1 (limit 50).
Filter: completed date: 2025-08-01 to 2025-08-31; labels: @work.
Preview:
    Completed task with label • P4 • id=8485093748"
`;

exports[`find-completed-tasks tool > timezone handling > should convert user timezone to UTC correctly (Europe/Madrid) 1`] = `
"Completed tasks (by completed date): 1 (limit 50).
Filter: completed date: 2025-10-11 to 2025-10-11.
Preview:
    Task completed in Madrid timezone • P4 • id=8485093750"
`;
